--- a/Advanced/Introduction-to-HTML-Exercise/L1_02_Paragraphs/Solution/index.html
+++ b/Advanced/Introduction-to-HTML-Exercise/L1_02_Paragraphs/Solution/index.html
@@ -16,6 +16,6 @@
       only as strong as its foundation, right? The advantages of <strong>clean, semantic HTML</strong> are many, yet so many websites suffer from poorly written markup
     </p>
     <p><strong>Strict DOCTYPE</strong>. If we are going to do this, let’s just do it right. No need for a discussion about whether to use HTML 4.01 or XHTML 1.0: both of them offer a strict version that will keep us nice and honest as we write our code.</p>
-    <p><strong>Character set & encoding characters</strong>. In our <tags><head></tags> section, the very first thing should be the declaration of our character set. We’re using UTF-8 here, which is swell, but it’s listed after our <title>. Let’s go ahead and move it up so that the browser knows what character set it’s dealing with before it starts reading any content at all.</p>
+    <p><strong>Character set & encoding characters</strong>. In our <em><head></em> section, the very first thing should be the declaration of our character set. We’re using UTF-8 here, which is swell, but it’s listed after our <en></en><p>. Let’s go ahead and move it up so that the browser knows what character set it’s dealing with before it starts reading any content at all.</p>
   </body>
 </html>
