--- a/Advanced/Introduction-to-CSS-Lab/L2_01_Fitness-Site/Solution/index.html
+++ b/Advanced/Introduction-to-CSS-Lab/L2_01_Fitness-Site/Solution/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fitness Site</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/f1a50d9abd.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
@@ -26,7 +27,32 @@
         <h1>DISCOVER THE HIDDEN <span>ALTER EGO</span> OF YOUR BODY</h1>
         <button>READ MORE</button>
       </section>
-      <section></section>
+      <section class="aboutus">
+        <article>
+        <h3>OUR CLASSES</h3>
+        <p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure.</p>
+      </article>
+      <article>
+        <h3>OUR TRAINERS</h3>
+        <p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure.</p>
+      </article>
+      <article>
+        <h3>MEMBERSHIPS</h3>
+        <p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure.</p>
+      </article>
+      </section>
     </main>
+    <footer>
+      <article class="leftPart">
+        &copy; Copyright OldWorld by Anonymous.Photos by Anonymous.
+      </article>
+      <article class="icons"> 
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-linkedin-in"></i>  
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-pinterest"></i>
+      </article>
+    </footer>
   </body>
 </html>
