--- a/Advanced/DOM Introduction/05.Colorize Table/tamplate.html
+++ b/Advanced/DOM Introduction/05.Colorize Table/tamplate.html
@@ -6,11 +6,13 @@
 </head>
 <body>
 <table>
-    <tr><th>Name</th><th>Town</th></tr>
-    <tr><td>Eve</td><td>Sofia</td></tr>
-    <tr><td>Nick</td><td>Varna</td></tr>
-    <tr><td>Didi</td><td>Ruse</td></tr>
-    <tr><td>Tedy</td><td>Varna</td></tr>
+    <table id="table">
+        <tr><th>Name</th><th>Town</th></tr>
+        <tr><td>Eve</td><td>Sofia</td></tr>
+        <tr><td>Nick</td><td>Varna</td></tr>
+        <tr><td>Didi</td><td>Ruse</td></tr>
+        <tr><td>Tedy</td><td>Varna</td></tr>
+       </table>
 </table>
 <button onclick="colorize()">Colorize</button>
 <script src="ColorizeTable.js"></script>
