--- a/JS Applications/copy/js-apps-spa/index.html
+++ b/JS Applications/copy/js-apps-spa/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="static/site.css">
     <link rel="stylesheet" href="static/recipe.css">
     <link rel="stylesheet" href="static/form.css">
+    <script src="/src/app.js" type="module"></script>
 </head>
 
 <body>
@@ -28,7 +29,9 @@
         <section class="home">
             <h2>Catalog</h2>
 
-            <div class="recipe-list"></div>
+            <div class="recipe-list">
+                
+            </div>
         </section>
 
         <section class="create">
@@ -61,9 +64,10 @@
             </form>
         </section>
 
-        <section class="not-found">
-            <h2>Page not found</h2>
-        </section>
+        <section class="error">
+            <h2>Error 404</h2>
+            </section>
+
     </main>
 </body>
 
